Compliance of the code with good coding practices AND Rewriting of the "Colors.conf" files for a better maintainability

--- a/docs/fr/modules/02) Config/main/Colors-conf.tex
+++ b/docs/fr/modules/02) Config/main/Colors-conf.tex
@@ -343,10 +343,10 @@
 \subsection{Fonctions d'affichage de texte}\color{text}
 
 \color{sec3}
-\subsubsection{BU.Main.ModConfig.Colors.PrintColorBGVarsNameSubsCmd}\color{text}
+\subsubsection{BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub}\color{text}
 
 \begin{justify}
-    \textbf{Fonction : \color{func}BU.Main.ModConfig.Colors.PrintColorBGVarsNameSubsCmd}
+    \textbf{Fonction : \color{func}BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub}
 \end{justify}
 
 \begin{justify}
@@ -431,7 +431,7 @@
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \begin{justify}
-    \textbf{Fonctionnement :} Le fonctionnement est identique à la fonction \textbf{\color{func}BU.Main.ModConfig.Colors.PrintColorBGVarsNameSubsCmd}, mais le message varie.
+    \textbf{Fonctionnement :} Le fonctionnement est identique à la fonction \textbf{\color{func}BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub}, mais le message varie.
 \end{justify}
 
 % ------------
@@ -439,7 +439,7 @@
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \begin{justify}
-    \textbf{Utilisation :} Même cas d'utilisation que pour la fonction \textbf{\color{func}BU.Main.ModConfig.Colors.PrintColorBGVarsNameSubsCmd}, mais la coloration du texte lui-même.
+    \textbf{Utilisation :} Même cas d'utilisation que pour la fonction \textbf{\color{func}BU.Main.ModConfig.Colors.BG.PrintColorVarNameCmdSub}, mais la coloration du texte lui-même.
 \end{justify}
 
 
