Huge save : best practices compliance, file description and every language name in current language in lang.csv

--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -284,6 +284,189 @@ __BU_MAIN_HEADERS_LIB__MSG__HeaderBase__bgColorPos_TOO_BIG,"This variable stores
 __BU_MAIN_HEADERS_LIB__MSG__HeaderBase__bgColorPos_NULL,"This variable stores the message that the value passed to the ""bgColorPos"" parameter is null",Warning : the length of the value passed as %s parameter is null,Avertissement : la longueur de la valeur passée au paramètre %s est nulle,
 __BU_MAIN_HEADERS_LIB__MSG__HeaderBase__bgColorPos_NOT_POS_INT,"This variable stores the message that the value passed to the ""bgColorPos"" parameter is not a positive integer",Warning : the value passed for the %s parameter is not a positive integer,Avertissement : la valeur passée au paramètre %s n'est pas un nombre entier positif,
 ,,,,
+__BU_MAIN_LOCALE_LIB__MSG__PRINTLANGUAGENAME__CURR_LANG__ABKHAZIAN,"This variable stores the message which informs the framework that the current language is the",
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AFAR
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AFRIKAANS
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AKAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ALBANIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AMHARIC
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ARABIC
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ARAGONESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ARMENIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ASSAMESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AVARIC
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AVESTAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AYMARA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__AZERBAIJANI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BAMBARA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BASHKIR
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BASQUE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BELARUSIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BENGALI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BIHARI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BISLAMA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BOSNIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BRETON
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BULGARIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__BURMESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CATALAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CHAMORRO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CHECHEN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CHICHEWA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CHINESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CHUVASH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CORNISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CORSICAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CREE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CROATIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__CZECH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__DANISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__DIVEHI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__DUTCH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__DZONGKA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ENGLISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ESPERANTO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ESTONIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__EWE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__FAROESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__FIJIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__FINNISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__FRENCH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__FULAH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GALICIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GANDA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GEORGIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GERMAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GREEK
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GREENLANDIC
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GUARANI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__GUJARATI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__HAITIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__HAUSA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__HEBREW
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__HERERO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__HINDI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__HIRI_MOTU
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__HUNGARIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ICELANDIC
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__IDO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__IGBO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__INDONESIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__INTERLINGUE1
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__INTERLINGUE2
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__INUKTITUT
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__INUPIAQ
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__IRISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ITALIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__JAPANESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__JAVANESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KANNADA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KANURI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KASHMIRI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KAZAKH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KHMER
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KIKUYU
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KINYARWANDA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KIRGHIZ
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KIRUNDI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KOMI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KONGO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KOREAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KURDISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__KWANYAMA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LAO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LATIN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LATVIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LIMBURGISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LINGALA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LITHUANIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LUBA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__LUXEMBOURGISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MACEDONIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MALAGASY
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MALAY
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MALAYALAM
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MALTESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MANX
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MAORI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MARATHI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MARSHALLESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MOLDAVIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__MONGOLIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NAURU
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NAVAJO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NDONGA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NEPALI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NORTHERN_SAMI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NORTH_NDEBELE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NORWEGIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NORWEGIAN_BOKMAL
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__NORWEGIAN_NYNORSK
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__OCCITAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__OJIBWA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__OLD_CHURCH_SLAVONIC
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ORIYA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__OROMO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__OSSETIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__PALI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__PANJABI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__PASHTO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__PERSIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__POLISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__PORTUGUESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__QUECHA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__REUNIONESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ROMANIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ROMANSH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__RUSSIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SAMOAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SANGO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SANSKRIT
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SARDINIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SCOTTISH_GAELIC
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SERBIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SERBO_CROATIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SHONA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SICHUAN_YI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SINDHI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SINHALESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SLOVAK
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SLOVENIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SOMALI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SOTHO
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SOUTH_NDEBELE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SPANISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SUNDANESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SWATI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__SWEDISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TAGALOG
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TAJIK
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TAMIL
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TATAR
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TELUGU
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__THAI
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TIBETAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TIGRINYA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TONGA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TSWANA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__TURKMEN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__UIGHUR
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__UKRAINIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__URDU
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__UZBEK
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__VENDA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__VIETNAMESE
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__VOLAPUK
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__WALON
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__WELSH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__WESTERN_FRISIAN
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__WOLOF
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__XHOSA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__YIDDISH
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__YORUBA
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ZHUANG
+__BU_MAIN_LOCALE_LIB__MSG__PrintLanguageName__CURR_LANG__ZULU,
+,,,,
 __BU_MAIN_OS_LIB__MSG__GetLinuxDistro__PROC_FILE_UNREADABLE,"This variable stores the message that warns the user that the Linux specific ""/proc/version"" file cannot be read",Unable to find or to read the %s file,Impossible de trouver ou de lire le fichier %s,
 ,,,,
 __BU_MAIN_POSIXTERM_LIB__MSG__,This variable stores the message that,,,
