--- a/docs/fr/CodeCouleur.tex
+++ b/docs/fr/CodeCouleur.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt]{article}
+    \documentclass[a4paper,10pt]{article}
 
 \usepackage[utf8]{inputenc}     % Encodage du texte (caractères accentués).
 \usepackage[french]{babel}      % Langue du document.
@@ -34,17 +34,17 @@
 \fontfamily{Roboto}
 
 \pagecolor{back}
-\title{\color{sec1}Fonctions du fichier de librairie \color{path}Files.lib}\color{text}
+\title{\color{sec1}Fonctions du fichier de librairie \color{path}Echo.lib}\color{text}
 \author{Dimitri OBEID}
-\date{2021}
+\date{2022}
 \pagestyle{fancy}
 
 \pdfinfo{
-  /Title    (Fonctions du fichier de librairie Files.lib)
+  /Title    (Fonctions du fichier de librairie Echo.lib)
   /Author   (Dimitri OBEID)
   /Creator  (Dimitri OBEID)
   /Producer (Dimitri OBEID)
-  /Subject  (Fonctions du fichier de librairie Files.lib)
+  /Subject  (Fonctions du fichier de librairie Echo.lib)
   /Keywords ()
 }
 
@@ -52,18 +52,3 @@
 \setlength{\parskip}{1em}
 
 \begin{document}
-
-\maketitle
-\newpage
-
-\hypertarget{contents}{}
-\tableofcontents
-\newpage
-
-\begin{abstract}
-
-\end{abstract}
-
-\section{}
-
-\end{document}
