--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -22,7 +22,7 @@
 \definecolor{case}{HTML}{fcff00}        % Jaune clair   - Conditions case
 \definecolor{cmds}{HTML}{909090}        % Gris          - Commandes + arguments
 \definecolor{cond}{HTML}{be480a}        % Brique        - Conditions
-\definecolor{func}{HTML}{8F00FF}        % Violet        - Fonctions
+\definecolor{func}{HTML}{800080}        % Violet        - Fonctions
 \definecolor{loop}{HTML}{00ffff}        % Cyan          - Boucles
 \definecolor{path}{HTML}{bfff00}        % Citron vert   - Chemins de dossiers et de fichiers
 \definecolor{sec1}{HTML}{ff0000}        % Rouge         - Titres de premier niveau
