--- a/docs/en/Color code.tex
+++ b/docs/en/Color code.tex
@@ -39,9 +39,16 @@
 \definecolor{text}{HTML}{ffffff}        % Blanc | Noir  - Color of the normal text.
 \definecolor{vars}{HTML}{FF7F00}        % Orange        - Color of the names of the parameters and the variables.
 
+% ----------------------------------------------------------------
+% Definition of the font and the background color of the document.
+
 \fontfamily{Roboto}
 
 \pagecolor{back}
+
+% -----------------------------------------------
+% Definition of the informations of the document.
+
 \title{\color{sec1}Color code of the official Bash Utils \\framework documentation}\color{text}
 \author{Dimitri OBEID}
 \pagestyle{fancy}
@@ -55,8 +62,12 @@
   /Keywords ()
 }
 
+% -----------------
 % Paragraph layout.
 \setlength{\parskip}{1em}
+
+% --------------------------
+% Beginning of the document.
 
 \begin{document}
 \maketitle
