--- a/docs/fr/modules/02) Config/main/Text-conf.tex
+++ b/docs/fr/modules/02) Config/main/Text-conf.tex
@@ -40,9 +40,16 @@
 \definecolor{vars}{HTML}{FF7F00}        % Orange        - Couleur des noms des paramètres et des variables.
 
 
+% ------------------------------------------------------------------------
+% Définition de la police d'écriture et de la couleur de fond du document.
+
 \fontfamily{Roboto}
 
 \pagecolor{back}
+
+% ----------------------------------------
+% Définition des informations du document.
+
 \title{\color{sec1}Variables et fonctions du fichier de configuration \color{path}Text.conf}\color{text}
 \author{Dimitri OBEID}
 \date{2022}
@@ -57,8 +64,12 @@
   /Keywords ()
 }
 
+% -----------------------------
 % Mise en page des paragraphes.
 \setlength{\parskip}{1em}
+
+% ------------------
+% Début du document.
 
 \begin{document}
 \maketitle
