--- a/docs/fr/modules/04) Functions/main/Echo.tex
+++ b/docs/fr/modules/04) Functions/main/Echo.tex
@@ -39,9 +39,16 @@
 \definecolor{text}{HTML}{ffffff}        % Blanc | Noir  - Couleur du texte normal.
 \definecolor{vars}{HTML}{FF7F00}        % Orange        - Couleur des noms des paramètres et des variables.
 
+% ------------------------------------------------------------------------
+% Définition de la police d'écriture et de la couleur de fond du document.
+
 \fontfamily{Roboto}
 
 \pagecolor{back}
+
+% ----------------------------------------
+% Définition des informations du document.
+
 \title{\color{sec1}Fonctions du fichier de librairie \color{path}Echo.lib}\color{text}
 \author{Dimitri OBEID}
 \date{2022}
@@ -56,8 +63,12 @@
   /Keywords ()
 }
 
+% -----------------------------
 % Mise en page des paragraphes.
 \setlength{\parskip}{1em}
+
+% ------------------
+% Début du document.
 
 \begin{document}
 \maketitle
