--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -39,9 +39,16 @@
 \definecolor{text}{HTML}{ffffff}        % Blanc | Noir  - Couleur du texte normal.
 \definecolor{vars}{HTML}{FF7F00}        % Orange        - Couleur des noms des paramètres et des variables.
 
+% ------------------------------------------------------------------------
+% Définition de la police d'écriture et de la couleur de fond du document.
+
 \fontfamily{Roboto}
 
 \pagecolor{back}
+
+% ----------------------------------------
+% Définition des informations du document.
+
 \title{\color{sec1}Tutoriels d'aide aux ajouts basiques\\ dans le module principal}\color{text}
 \author{Dimitri OBEID}
 \date{2021}
