Corrected the problems which generated this warning message : "Package fancyhdr Warning: \headheight is too small (12.0pt)"

--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -63,9 +63,11 @@
   /Keywords ()
 }
 
-% -----------------------------
-% Mise en page des paragraphes.
+% ------------------------------------------------------------
+% Mise en page des paragraphes et des en-têtes de chaque page.
 \setlength{\parskip}{1em}
+
+\setlength{\headheight}{13pt}
 
 % ------------------
 % Début du document.
