--- a/docs/fr/modules/04) Functions/main/TextFormat.tex
+++ b/docs/fr/modules/04) Functions/main/TextFormat.tex
@@ -63,9 +63,11 @@
   /Keywords ()
 }
 
-% -----------------------------
-% Mise en page des paragraphes.
+% ------------------------------------------------------------
+% Mise en page des paragraphes et des en-têtes de chaque page.
 \setlength{\parskip}{1em}
+
+\setlength{\headheight}{13pt}
 
 % ------------------
 % Début du document.
@@ -77,5 +79,22 @@
 \hypertarget{contents}{}
 \tableofcontents
 \newpage
+
+\color{sec1}
+\section{Présentation}\color{text}
+
+\color{sec2}
+\subsection{Description}\color{text}
+
+\begin{justify}
+    Ce fichier source inclut des fonctions servant à la coloration du texte, du fond de l'espace occupé par un caractère, et à la mise en forme du texte dans différents formats :
+    \begin{itemize}
+      \item \textbf{gras},\mbox{}
+      \item \textit{italique},\\\mbox{}
+    \end{itemize}
+
+    et bien plus.
+\end{justify}
+
 
 \end{document}
