--- a/docs/fr/modules/04) Functions/main/Files.tex
+++ b/docs/fr/modules/04) Functions/main/Files.tex
@@ -63,9 +63,11 @@
   /Keywords ()
 }
 
-% -----------------------------
-% Mise en page des paragraphes.
+% ------------------------------------------------------------
+% Mise en page des paragraphes et des en-têtes de chaque page.
 \setlength{\parskip}{1em}
+
+\setlength{\headheight}{13pt}
 
 % ------------------
 % Début du document.
