Corrected several problems and added more informations in the color codes documentations

--- a/docs/en/Color code.tex
+++ b/docs/en/Color code.tex
@@ -81,6 +81,22 @@
   To switch to printable format, please run the \textbf{\color{cmds}latex-convert-to-printable.sh} script. It is located in the folder of executable files, but its code has not been written yet.
 \end{justify}
 
+\color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+\begin{justify}
+  \textbf{NOTE :} Each time you call the \textbf{color} command included in the \textbf{xcolor} package, please call the native \textbf{textbf} \LaTeX \ command to make the colored string bold, in order to better highlight it.
+\end{justify}
+
+\begin{justify}
+  To do so, please follow the following rule :
+
+  \begin{itemize}
+    \item \textbackslash{textbf\{\textbackslash{color\{name\_of\_the\_defined\_color\_code}\}}\}
+  \end{itemize}
+\end{justify}
+
+\color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
 \begin{justify}
   The list of color codes for the printable version is located below the following list on the next page.
 \end{justify}
