--- a/docs/fr/Code couleur.tex
+++ b/docs/fr/Code couleur.tex
@@ -83,6 +83,22 @@
   Pour passer au format imprimable, exécutez le script \textbf{\color{cmds}latex-convert-to-printable.sh}. Il se situe dans le dossier des fichiers exécutables, mais son code n'a pas encore été écrit.
 \end{justify}
 
+\color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
+\begin{justify}
+  \textbf{NOTE :} À chaque fois que vous appelez la commande \textbf{color} incluse dans le paquet \textbf{xcolor}, veuillez appeler la commande native de \LaTeX \ \textbf{textbf} pour mettre en gras la chaîne de caractères colorée, pour mieux la mettre en évidence.
+\end{justify}
+
+\begin{justify}
+  Pour ce faire, veuillez procédez de la manière suivante :
+
+  \begin{itemize}
+    \item \textbackslash{textbf\{\textbackslash{color\{nom\_du\_code\_couleur\_défini}\}}\}
+  \end{itemize}
+\end{justify}
+
+\color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
+
 \begin{justify}
   La liste des codes de couleurs pour la version imprimable se situe en dessous de la liste suivante, à la page suivante.
 \end{justify}
