--- a/docs/fr/modules/04) Functions/main/Headers.tex
+++ b/docs/fr/modules/04) Functions/main/Headers.tex
@@ -308,7 +308,7 @@
 \end{justify}
 
 \begin{justify}
-    Une fois la commande exécutée pendant la comparaison, la commande \textbf{\color{cmds}echo} est appelée avec ses options \textbf{\color{cmds}-ne} pour encoder la couleur de la ligne de caractère à dessiner.
+    Une fois la commande exécutée pendant la comparaison, la commande \textbf{\color{cmds}echo} est appelée avec ses options \textbf{\color{cmds}-n} et \textbf{\color{cmds}-e} pour encoder la couleur de la ligne de caractère à dessiner.
 \end{justify}
 
 \begin{justify}
@@ -501,12 +501,12 @@
 \begin{itemize}
     \item
     {
-        \begin{justify}
-            Pour connaitre la valeur de chaque chiffre enregistré dans ce paramètre, Un tableau est créé et prend en valeurs chacun des chiffres.\mbox{}
+        \begin{justify}                                                                                                                          \mbox{}
+            Pour connaitre la valeur de chaque chiffre enregistré dans ce paramètre, Un tableau est créé et prend en valeurs chacun des chiffres.\\\mbox{}
         \end{justify}
 
         \begin{justify}
-            \textbf{\color{cond}Si} un nombre entier positif est passé à ce même paramètre \textbf{ET} que ce nombre entier soit plus grand ou égal à 1 \textbf{ET} qu'il soit plus petit ou égal à 3, \textbf{\color{cond}alors} :
+            \textbf{\color{cond}Si} un nombre entier positif \textbf{à trois chiffres} est passé à ce même paramètre \textbf{ET} que ce nombre entier soit plus grand ou égal à 1 \textbf{ET} qu'il soit plus petit ou égal à 3, \textbf{\color{cond}alors} :
         \end{justify}
 
         \begin{justify}
@@ -530,7 +530,7 @@
                         \end{justify}\setlength{\parskip}{1em}
 
                         \begin{justify}
-                            \textbf{\color{cond}Sinon, si} l'un des chiffres de ce nombre à trois chiffres est égal à \textbf{3}, \textbf{\color{cond}alors} la fonction \textbf{\color{func}BU.Main.Decho.BGColor} est appelée pour coloriee le fond de la zone de texte où la seconde ligne de caractères est affichée.
+                            \textbf{\color{cond}Sinon, si} l'un des trois chiffres est égal à \textbf{3}, \textbf{\color{cond}alors} la fonction \textbf{\color{func}BU.Main.Decho.BGColor} est appelée pour coloriee le fond de la zone de texte où la seconde ligne de caractères est affichée.
                         \end{justify}\setlength{\parskip}{1em}
 
                         \begin{justify}
@@ -544,7 +544,7 @@
                 \end{itemize}
 
                 \begin{justify}
-                    \textbf{\color{loop}Fin de la boucle « pour »}.
+                    \textbf{\color{loop}Fin de la boucle « pour »}.\\\mbox{}
                 \end{justify}
             }
         \end{justify}
