--- a/docs/fr/modules/04) Functions/main/Permissions.tex
+++ b/docs/fr/modules/04) Functions/main/Permissions.tex
@@ -110,7 +110,7 @@ Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\base
 \color{sec3}
 \subsubsection{Fonctions}\color{text}
 
-\textbf{Fonction :} \textbf{\color{mauve}\color{text}}\\[1\baselineskip]
+\textbf{Fonction :} \textbf{\color{func}\color{text}}\\[1\baselineskip]
 
 \textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
 
