--- a/docs/fr/modules/04) Functions/main/Text.tex
+++ b/docs/fr/modules/04) Functions/main/Text.tex
@@ -113,7 +113,7 @@ Ce fichier source inclut des fonctions servant à la manipulation de chaînes de
 \color{sec3}
 \subsubsection{Fonctions}\color{text}
 
-\textbf{Fonction :} \textbf{\color{mauve}\color{text}}\\[1\baselineskip]
+\textbf{Fonction :} \textbf{\color{func}\color{text}}\\[1\baselineskip]
 
 \textbf{Fichier de définition :} \textbf{\color{path}\color{text}}\\[1\baselineskip]
 
