Compiled the color code documentations into PDF files

--- a/docs/en/Color code.tex
+++ b/docs/en/Color code.tex
@@ -84,7 +84,7 @@
 \color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
 \begin{justify}
-  \textbf{NOTE :} Each time you call the \textbf{color} command included in the \textbf{xcolor} package, please call the native \textbf{textbf} \LaTeX \ command to make the colored string bold, in order to better highlight it.
+  \textbf{NOTE :} Each time you call the \textbf{\textbackslash{color}} command included in the \textbf{xcolor} package, please call the \textbf{\textbackslash{textbf}} native \LaTeX \ command to make the colored string bold, in order to better highlight it.
 \end{justify}
 
 \begin{justify}
