--- a/docs/fr/Code couleur.tex
+++ b/docs/fr/Code couleur.tex
@@ -86,7 +86,7 @@
 \color{text}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
 \begin{justify}
-  \textbf{NOTE :} À chaque fois que vous appelez la commande \textbf{color} incluse dans le paquet \textbf{xcolor}, veuillez appeler la commande native de \LaTeX \ \textbf{textbf} pour mettre en gras la chaîne de caractères colorée, pour mieux la mettre en évidence.
+  \textbf{NOTE :} À chaque fois que vous appelez la commande \textbf{\textbackslash{color}} incluse dans le paquet \textbf{xcolor}, veuillez appeler la commande native de \LaTeX \ \textbf{\textbackslash{textbf}} pour mettre en gras la chaîne de caractères colorée, pour mieux la mettre en évidence.
 \end{justify}
 
 \begin{justify}
